--- a/docs/frontEnd/Javascript/问题记录.md
+++ b/docs/frontEnd/Javascript/问题记录.md
@@ -11,3 +11,16 @@
 下载：MIME type `application/octet-stream`
 
 ## 跨域 Iframe 通信兼容 ie
+
+<https://www.cnblogs.com/liuminghai/p/4441962.html>
+
+## canvas 模糊
+
+[关于使用 pdfjs 预览 PDF 文件](https://www.jianshu.com/p/df5f9726cbbf)
+用 pdfjs 渲染 pdf 文件，发现比实际的模糊。  
+[放大缩小法](https://stackoverflow.com/questions/49426385/pdf-js-displays-pdf-documents-in-really-low-resolution-blurry-almost-is-this-h)：
+设置 canvas 画布尺寸为实际尺寸的两倍或者更多，再用 css 缩小画布，使用更多的像素渲染 pdf，这样就清晰了。
+
+## 如何 chrome 中控制 PDF 预览工具栏
+
+在 PDF 文件 url 地址后面 拼接 #scrollbars=0&toolbar=0&statusbar=0 参数
